gccida/c0/check_dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_dependence/src/cse.c:2282:64: error: expected expression
return true_dependence( *( ( rtx *)data + 1), *( machine_mode *)data, *x, ( int ( *)( rtx, int))cse_rtx_varies_p); 
                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_dependence/src/cse.c:2282:50: error: use of undeclared identifier 'machine_mode'
return true_dependence( *( ( rtx *)data + 1), *( machine_mode *)data, *x, ( int ( *)( rtx, int))cse_rtx_varies_p); 
                                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_dependence/src/obj/cse.o] Error 1
